Import of DUPUISARN/File-Reader-0.6 from CPAN.
gitpan-cpan-distribution: File-Reader
gitpan-cpan-version:      0.6
gitpan-cpan-path:         DUPUISARN/File-Reader-0.6.tar.gz
gitpan-cpan-author:       DUPUISARN
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,6 +1,14 @@
 Revision history for Perl extension File::Reader.
 
-0.01  Tue Jan 27 19:16:55 2004
+0.6 Wed Feb  4 16:16:46 2004
+	- add a new function (generateConfFile)
+
+0.5.1 Wed Jan 30 03:35:00 2004
+	- Update the 0.5 version (new == 0.51).
+		- Correct some bugs (like in *ReadConfAdv* functions).
+		- Provide a real test interface.
+
+0.5  Tue Jan 27 19:16:55 2004
 	- original version; created by h2xs 1.21 with options
 		-A -X -n File::Reader
 
