--- a/README
+++ b/README
@@ -1,21 +1,20 @@
-File/Reader version 0.6
+File-Reader version 0.01
 ========================
 
-File::Reader allow you to simply manipulate your text files. You can easily read and write text file (or sources codes, HTML, XML, etc.).
-I personally use very often Write() to generate HTML code.
-File::Reader also provided a good interface for reading configuration files.
+The README is used to introduce the module and provide instructions on
+how to install the module, any machine dependencies it may have (for
+example C compilers and installed libraries) and any other information
+that should be provided before the module is installed.
 
-This release contain a new function : generateConfFile()
+A README file is required for CPAN modules since CPAN extracts the
+README file from a module distribution so that people browsing the
+archive can use it get an idea of the modules uses. It is usually a
+good idea to provide version information here so that people can
+decide whether fixes for the module are worth downloading.
 
 INSTALLATION
 
 To install this module type the following:
-
-Best :
-
-% perl -MCPAN -e 'install File::Reader'
-
-Standart :
 
    perl Makefile.PL
    make
@@ -26,11 +25,16 @@ DEPENDENCIES
 
 This module requires these other modules and libraries:
 
-	Term::ANSIColor
+  blah blah blah
 
 COPYRIGHT AND LICENCE
 
-Copyright (c) 2004 Arnaud DUPUIS <arno@asocial.org>. All rights reserved.
-This program is free software; you can redistribute it and/or modify it under the same terms as Perl itself.
+Put the correct copyright and licence information here.
+
+Copyright (C) 2004 by A. U. Thor
+
+This library is free software; you can redistribute it and/or modify
+it under the same terms as Perl itself, either Perl version 5.8.4 or,
+at your option, any later version of Perl 5 you may have available.
 
 
